2015-11-01  Kubo Takehiro  <kubo@jiubao.org>
	* NEWS: Add changes between 2.2.0.2 and 2.2.1.
	* lib/oci8/version.rb: update to 2.2.1.

2015-11-01  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8.h: Delete unnecessary checks.
	* ext/oci8/oraconf.rb: Reduce time to build an import library on
	    Mingw32 and Cygwin.

2015-11-01  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb: delete code for Oracle 8i.

2015-10-26  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8lib.c: Fix handle leaks when OCI8#ping is used and
	    the Oracle client version is 10gR1.
	    This bug was introduced in ruby-oci8 2.2.0.

2015-10-26  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8lib.c: Revive code dropped in ruby-oci8 2.2.0.
	    This prevents potential SEGV on ruby process termination.

2015-10-26  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocinumber.c: Drop code for ruby 1.8.
	    Rational has been a built-in type since ruby 1.9.

2015-10-20  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c, lib/oci8/bindtype.rb, test/test_all.rb,
	  test/test_bind_boolean.rb: Support boolean type binding.

2015-10-19  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml: Delete unused OCI function definitions.

2015-10-19  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb: Use macros OCI_MAJOR_VERSION and OCI_MINOR_VERSION
	    in oci.h to check the target Oracle client version.

2015-10-12  Kubo Takehiro  <kubo@jiubao.org>
	* NEWS: Add changes between 2.2.0.1 and 2.2.0.2.

2015-10-12  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/version.rb: Update the version to 2.2.0.2 to
	    release binary gems for mingw32.

2015-10-11  Kubo Takehiro  <kubo@jiubao.org>
	* NEWS: Add changes between 2.2.0 and 2.2.0.1.
	* docs/install-on-osx.md: Fix indent width.
	* lib/oci8/version.rb: update to 2.2.0.1.

2015-10-11  Kubo Takehiro  <kubo@jiubao.org>
	* docs/osx-install-dev-tools.png: added.
	* docs/install-on-osx.md: fix "Install C compiler."